PDF-Export: Fixed issue with infobox overlapping toc
Infobox was overlapping the toc section. Added clear:both to toc id

--- a/UEModulePDF/data/PDFTemplates/common/stylesheets/mediawiki.css
+++ b/UEModulePDF/data/PDFTemplates/common/stylesheets/mediawiki.css
@@ -459,6 +459,7 @@ table {
 	background-color: #f9f9f9;
 	padding: 5px;
 	font-size: 95%;
+	clear: both;
 }
 
 #toc h2, .toc h2 {
